tests/neg/source-import-3-1-migration.scala
import language.`3.1-migration` // error
